# rustveil

./: .gitignore  .todo  README.md  cli.txt  package-lock.json  package.json  svelte.config.js  tailwind.config.js  todo  vite.config.js
app/: layout.tsx  page.tsx  providers.tsx
app/about/: page.tsx
components/: NavigationApp.tsx  ScrollSmotherProvider.tsx  TabWorkstation.tsx  color-primitive.ts  icons.tsx  leftnav.tsx  navbar.tsx  navbarwrapper.tsx
config/: site.ts
public/: data instagram.xlsx  fake data.xlsx
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  second.ts
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/db_connection/: mod.rs
src-tauri/src/database/lib/: mod.rs
src-tauri/src/database/lib/get/: mod.rs
src-tauri/src/database/lib/get/all_data/: mod.rs
src-tauri/src/database/lib/get/sentiment_data/: mod.rs
src-tauri/src/database/lib/get/social_network/: mod.rs
src-tauri/src/database/lib/get/text_target/: mod.rs
src-tauri/src/database/lib/handler/: mod.rs
src-tauri/src/database/lib/state/: mod.rs
src-tauri/src/database/query/: mod.rs
src-tauri/src/database/sql/: mod.rs
src-tauri/src/database/state/: mod.rs
src-tauri/src/edges/: struct.rs
src-tauri/src/global/: mod.rs
src-tauri/src/global/app_path/: mod.rs
src-tauri/src/global/db_connection/: mod.rs
src-tauri/src/home/: home.rs
src-tauri/src/workstation/: mod.rs
src-tauri/src/workstation/data/: mod.rs
src-tauri/src/workstation/data/excel/: mod.rs
src-tauri/src/workstation/data/state/: mod.rs
src-tauri/src/workstation/ner/: mod.rs
src-tauri/src/workstation/sentiment_analysis/: mod.rs
src-tauri/src/workstation/sentiment_analysis/calculate/: mod.rs
src-tauri/src/workstation/sentiment_analysis/handler/: mod.rs
src-tauri/src/workstation/sentiment_analysis/state/: mod.rs
src-tauri/src/workstation/social_network/: mod.rs
src-tauri/src/workstation/social_network/calculate/: mod.rs
src-tauri/src/workstation/social_network/handler/: mod.rs
src-tauri/src/workstation/social_network/state/: mod.rs
src-tauri/src/workstation/state_response/: mod.rs
(+301 files in other folders)
