[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
# Set to 1 or 2 for a faster application (but slower compilation than opt-level=0)
# You might need to experiment to find the sweet spot for your project.
opt-level = 1

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
calamine = "0.28.0" # 
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
chrono = "0.4.41"
petgraph = "0.8.2"
rustworkx-core = "0.16.0"
tauri-plugin-log = "2"
rusqlite = { version = "0.32.0", features = ["bundled"] } # Must match sea-query-rusqlite's requirement
sea-query = "0.32.6" # Version compatible with rusqlite 0.32
sea-query-rusqlite = "0.7.0" # The version you want to use
uuid = { version = "1.3", features = ["v4"] }
tauri-plugin-store = "2"
